<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout android:id="@+id/premierL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:layout_weight="1"
            android:onClick="RecupDate"/>
        <Button android:id="@+id/ann"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Ann"
            android:layout_weight="1"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre" />
            <EditText android:id="@+id/titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_titre"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:id="@+id/premier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo"/>
                <EditText android:id="@+id/todo"
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@id/premier"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lines="5"
                    android:hint="@string/edit_todo"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PourL" />
            <DatePicker android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lien"/>
            <EditText android:id="@+id/lien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_nom"/>
            <EditText android:id="@+id/comm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="10"
                android:text="@string/edit_comm"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
