<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/aff_but_annuler_id"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aff_but_quit_text" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/aff_sv_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_titre_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/aff_tv_titre_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/aff_tv_note_title_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_note_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/aff_tv_note_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/aff_tv_note_title_id"
                    android:gravity="top|center_vertical"
                    android:lines="5"
                    android:maxLines="5"
                    android:scrollHorizontally="false"
                    android:scrollbars="none" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_pour_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <DatePicker
                android:id="@+id/aff_dp_pour_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                />

            <!--  Pour tests -> android:calendarViewShown="false"
             -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_correspondant_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/aff_tv_correspondant_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                />

            <TextView
                android:id="@+id/aff_tv_commentaire_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center_vertical"
                android:lines="10"
                android:maxLines="10" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
